<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Pix-EzViewer</string>
    <string name="app_features">
        "部分功能隐藏于菜单或长按后，多按直觉尝试\n"
    </string>
    <string name="app_help">
        "0.本应用是免费应用，如果您付费购买，请立即请求退款并打差评！\n"
        "请务必确保在商店或者项目地址内安装与更新,第三方提供的安装包可能存在问题且不是最新\n"
        "1.在图片详情页长按可以保存选定图片，长按头像快速关注作者，请提供应用权限\n"
        "2.大多数按钮设有有符合直觉的长按特殊操作（如图片收藏时打tag），或者藏在菜单里，可以多尝试\n"
        "3.浏览动图时，点击中间0%进度条开始下载,完毕播放后长按进行合成保存，合成过程内存开销相当之大,偶发崩溃不可避免\n"
        "4.若播放动图无法播放,请退出页面或者清除缓存后重试,这一般会起作用\n"
        "5.这是一个个人开发的应用,反馈请发邮件到设置页标注的邮箱或GitHub提交issue,个人精力和能力是有限的,请不要使用极端方式进行反馈,体谅开发者,也欢迎共同开发设计\n"
        "6.遇到更新后闪退的问题,请尝试清除应用数据并更新到最新版,将提示错误信息或日志反馈给开发者,多数情况下这是有效的\n"
        "7.R限制总开关在官网里，遇到无权限访问的插画，自行至网页开启，开发者不提供帮助服务，开发者并不是老好人\n"
        "8.新账户注册支持已暂停，请自行官网注册\n"
        "9.本应用不收集除崩溃信息以外的非必要信息\n"
        "\n可在设置页重新打开此帮助"
    </string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="follow">关注</string>
    <string name="click">点击请我喝杯咖啡</string>
    <string name="support_string">反馈邮箱：Pix-Ez@outlook.com 欢迎通过github 反馈及star 也可以通过关于页面跳转请我喝杯咖啡</string>
    <string name="current_developer">当前开发者</string>
    <string name="support_Notsfsssf" translatable="false">912756674@qq.com</string>
    <string name="support_ultranity" translatable="false">1095429904@qq.com</string>
    <string name="support_text">"PixEz对您有帮助吗？\n 您的支持将鼓励我持续开发~\n 可以通过邮箱发送信息认领捐赠！\n 截图后点击跳转扫描"</string>
    <string name="support_popup_title">支持开发者：</string>
    <string name="support_static">粗略统计，您使用PixEz收图张数已达：%1$s !</string>
    <string name="ali">跳转到支付宝</string>
    <string name="wechat" >跳转到微信</string>
    <string name="thanks">感谢腐奇，爱酱,Snake，PoisonBCat,涛灬,万物皆虚,繁落,碘酒,betray,right now,niconiconi,firok,YAMAHA,OneMice,SC61帮助我测试的弹幕委员会的热心你群群友们,以及提供会员帐号的果干辣，还有积极提供建议的吸血姬，逢田梨香子的老公,吃猫的咸鱼等热心用户们</string>
    <string name="add_widget" translatable="false">Add widget</string>
    <string name="title_activity_saucenao" translatable="false">Saucenao Search</string>
    <string name="configure" translatable="false">Configure</string>
    <string name="title_activity_search_result" translatable="false">SearchResultActivity</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">PxEz</string>
    <string name="nav_header_subtitle" translatable="false">Pix-Ez@outlook.com</string>
    <string name="img_manager">图片管理</string>
    <string name="checkupdate">检查更新</string>
    <string name="_18">隐藏遮罩</string>
    <string name="picturequality">图片质量</string>
    <string name="searchsource">以图搜源</string>
    <string name="cleancatche">清除缓存</string>
    <string name="appsetting">应用设置</string>
    <string name="filesaveformat">自定义保存格式</string>
    <string name="savepath">保存路径</string>
    <string name="startpage">初始页面</string>
    <string name="pixel">分辨率</string>
    <string name="view">查看</string>
    <string name="bookmark">收藏</string>
    <string name="illustid">插画ID</string>
    <string name="proxy">不启用直连</string>
    <string name="download">下载</string>
    <string name="crash_report">报告</string>
    <string name="needstatusbar">异形屏：详情状态栏不沉浸</string>
    <string name="refreshTab">tab自动刷新</string>
    <string name="refreshTab_summary">首页等切换后不保留先前状态，节省内存</string>
    <string name="changeicons">更换图标</string>
    <string name="supporttitle">支持</string>
    <string name="viewreport">查看报告</string>
    <string name="animation">更多动画</string>
    <string name="animation_summary">关闭可节省转场动画的运存</string>
    <string name="show_user_img_searchr">搜索页面显示用户头像</string>
    <string name="show_user_img_searchr_summary">使用大卡片样式,关闭可节省部分运存</string>
    <string name="show_user_img_bookmarked">收藏页面显示用户头像</string>
    <string name="show_user_img_bookmarked_summary">使用大卡片样式,关闭可节省部分运存</string>
    <string name="show_user_img_main">首页显示用户头像</string>
    <string name="show_user_img_main_summary">使用大卡片样式,关闭可节省部分运存</string>
    <string name="new_banner">滑动式pixivision展示</string>
    <string name="banner_summary">使用自适应的滑动式banner，减少交互层级</string>
    <string name="download_progress">下载进度</string>
    <string name="restart">重启</string>
    <string name="account_management">账号管理</string>
    <string name="auto_check_update">自动检查更新</string>
    <string name="create_painter_folder">为每个画师单独创建文件夹</string>
    <string name="create_separate_folder">创建单独文件夹</string>
    <string name="create_R18_folder">创建单独R18文件夹</string>
    <string name="R18_private">自动私密收藏</string>
    <string name="translate">翻译</string>
    <string name="block_tag">屏蔽标签</string>
    <string name="task_setting">任务设置</string>
    <string name="all_resume">全部恢复</string>
    <string name="all_stop">全部暂停</string>
    <string name="all_cancel">清空列队</string>
    <string name="finished_cancel">移除已完成任务</string>
    <string name="unfinished_task">下载未完成的任务</string>
    <string name="resume_unfinished_task_on">启动app时自动恢复未完成任务</string>
    <string name="resume_unfinished_task_off">启动app时仅保留下载未完成任务</string>
    <string name="share">分享</string>
    <string name="needstatusbar_subtext">——v——</string>
    <string name="ultranity_subtext">编写开发调试(当前维护者)</string>
    <string name="notsf_subtext2">编写开发调试(原作者)</string>
    <string name="rightnow_subtext">主界面,主Icon设计</string>
    <string name="autocheck_subtext">play版本不生效</string>
    <string name="h_is_ok">H是可以的！ԅ(¯﹃¯ԅ)</string>
    <string name="h_not_ok">H是不行的！ (￣^￣)</string>
    <string name="supportsummary">如果你觉得这个应用还不错，支持一下吧</string>
    <string name="welcomePR">如果你希望且有能力帮助改进这个应用，欢迎PR</string>
    <string name="donate">捐赠</string>
</resources>