<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="APP Info">
        <Preference
            app:key="version"
            app:icon="@mipmap/ic_launcherep_round"
            app:title="Version"
            />
        <Preference
            app:key="me0"
            app:icon="@drawable/ultranity"
            app:title="Ultranity"
            android:summary="@string/ultranity_subtext"
            />
        <Preference
            app:key="me"
            app:icon="@drawable/xinobu"
            app:title="Perol_Notsf"
            android:summary="@string/notsf_subtext2"
            />
        <Preference
            app:key="me1"
            app:title="Right Now"
            app:icon="@drawable/rightnow"
            android:summary="@string/rightnow_subtext"
            />
        <Preference
            app:key="icons"
            app:icon="@drawable/nizhuren"
            app:title="@string/changeicons"
            app:summary="你主人(探姬);HK流星(MD)绘制"
            />
        <Preference
            app:key="check"
            app:title="@string/checkupdate"
            app:summary="update" />
    </PreferenceCategory>
    <PreferenceCategory app:title="Switch">
        <SwitchPreference
            android:summaryOn="@string/h_is_ok"
            app:defaultValue="false"
            app:key="r18on"
            app:summaryOff="@string/h_not_ok"
            app:title="@string/_18" />
        <SwitchPreference
            app:key="disableproxy"
            app:title="@string/proxy" />
        <SwitchPreference
            app:defaultValue="true"
            app:key="resume_unfinished_task"
            app:summaryOff="@string/resume_unfinished_task_off"
            app:summaryOn="@string/resume_unfinished_task_on"
            app:title="@string/unfinished_task" />
        <SwitchPreference
            app:defaultValue="true"
            app:summary="@string/autocheck_subtext"
            app:key="autocheck"
            app:title="@string/auto_check_update" />
        <SwitchPreference
            android:key="crashreport"
            app:defaultValue="true"
            app:title="@string/crash_report" />
        <Preference
            app:key="viewreport"
            android:title="@string/viewreport"/>
    </PreferenceCategory>
    <PreferenceCategory app:title="UI">
        <SwitchPreference
            android:summary="@string/needstatusbar_subtext"
            app:key="needstatusbar"
            app:title="@string/needstatusbar" />
        <SwitchPreference
            app:key="refreshTab"
            app:defaultValue="true"
            app:title="@string/refreshTab"
            app:summary="@string/refreshTab_summary"/>
        <SwitchPreference
            android:summary="@string/animation_summary"
            app:defaultValue="true"
            app:key="animation"
            app:title="@string/animation" />
        <SwitchPreference
            android:summary="@string/banner_summary"
            app:defaultValue="true"
            app:key="use_new_banner"
            app:title="@string/new_banner" />
        <SwitchPreference
            app:defaultValue="true"
            app:key="show_user_img_main"
            app:summary="@string/show_user_img_main_summary"
            app:title="@string/show_user_img_main" />
        <SwitchPreference
            app:defaultValue="true"
            app:key="show_user_img_bookmarked"
            app:summary="@string/show_user_img_bookmarked_summary"
            app:title="@string/show_user_img_bookmarked" />
        <SwitchPreference
            app:defaultValue="true"
            app:key="show_user_img_searchr"
            app:summary="@string/show_user_img_searchr_summary"
            app:title="@string/show_user_img_searchr" />
    </PreferenceCategory>
    <PreferenceCategory app:title="Selection">
        <Preference
            app:key="storepath1"
            app:title="@string/savepath" />
        <SwitchPreference
            app:key="needcreatefold"
            app:defaultValue="false"
            app:title="@string/create_separate_folder"
           app:summary="@string/create_painter_folder"/>
        <SwitchPreference
            app:key="R18Folder"
            app:defaultValue="false"
            app:title="@string/create_R18_folder"/>
        <SwitchPreference
            app:key="R18Private"
            app:defaultValue="true"
            app:title="@string/R18_private"/>
        <Preference
            app:key="filesaveformat"
            app:title="@string/filesaveformat"/>
        <ListPreference
            android:entries="@array/firstpage"
            android:entryValues="@array/firstpage_value"
            app:defaultValue="0"
            app:key="firstpage"
            app:title="@string/startpage"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:entryValues="@array/quality_value"
            app:defaultValue="0"
            app:entries="@array/quality"
            app:key="quality"
            app:title="@string/picturequality"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            android:entries="@array/language"
            android:entryValues="@array/language_values"
            app:defaultValue="0"
            app:key="language"
            app:title="Language" />
    </PreferenceCategory>


</androidx.preference.PreferenceScreen>
