<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_action_user"
            android:title="@string/account_management" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_star"
            android:title="@string/walk_through" />
        <item
            android:id="@+id/nav_search_pic"
            android:icon="@drawable/ic_gallery"
            android:title="@string/searchsource" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_action_history"
            android:title="@string/view_history" />
        <item
            android:id="@+id/nav_progress"
            android:icon="@drawable/ic_action_download"
            android:title="@string/download_progress" />
        <item
            android:icon="@drawable/ic_action_theme"
            android:title="@string/theme"
            android:id="@+id/nav_theme"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_outline"
            android:title="@string/appsetting" />
    </group>

    <group android:id="@+id/config_menu">
        <item
            android:id="@+id/nav_rename"
            android:icon="@drawable/ic_action_folder"
            android:title="@string/img_manager" />
        <item
            android:id="@+id/nav_blocklist"
            android:title="@string/block_tag"
            android:icon="@drawable/ic_action_block" />
        <item
            android:id="@+id/nav_cache_clean"
            android:icon="@drawable/ic_action_del"
            android:title="@string/cleancatche" />
    </group>

</menu>
